--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <nav class="main-nav">
-                <h2>Каталог товаров</h2>
+                <h2><a href="#" class="main-nav-headline">Каталог товаров</a></h2>
                 <ul class="header-service">
                     <li><a href="#">Доставка</a></li>
                     <li><a href="#">Гарантия</a></li>
@@ -147,38 +147,38 @@
             </div>
             <div class="container">
     			<ul class="index-cotalog-list">
-    				<li class="index-cotalog-item cotalog-vr">
-    					<a href="#">
+    				<li class="cotalog-vr">
+    					<a href="#" class="index-cotalog-item">
                             <div class="icon-container"></div>
                             <p>Виртуальная реальность</p>
                         </a>
     				</li>
     				<li class="index-cotalog-item cotalog-monopods">
-    					<a href="catalog.html">
+    					<a href="catalog.html" class="index-cotalog-item">
                             <div class="icon-container"></div>
                             <p>Моноподы для селфи</p>
                         </a>
     				</li>
-    				<li class="index-cotalog-item cotalog-camera">
-    					<a href="#">
+    				<li class="cotalog-camera">
+    					<a href="#" class="index-cotalog-item">
                             <div class="icon-container"></div>
                             <p>Экшн-камеры</p>
                         </a>
     				</li>
-    				<li class="index-cotalog-item cotalog-fitBracelet">
-    					<a href="#">
+    				<li class="cotalog-fitBracelet">
+    					<a href="#" class="index-cotalog-item">
                             <div class="icon-container"></div>
                             <p>Фитнеc-браслеты</p>
                         </a>
     				</li>
-    				<li class="index-cotalog-item cotalog-smart-watch">
-    					<a href="#">
+    				<li class="cotalog-smart-watch">
+    					<a href="#" class="index-cotalog-item">
                             <div class="icon-container"></div>
                             <p>Умные часы</p>
                         </a>
     				</li>
-    				<li class="index-cotalog-item cotalog-drons">
-    					<a href="#">
+    				<li class="cotalog-drons">
+    					<a href="#" class="index-cotalog-item">
     					    <div class="icon-container"></div>
                             <p>Квадрокоптеры</p>
                         </a>
@@ -189,13 +189,13 @@
     			<section class="service container">
     				<ul class="service-slider">
     					<li class="button-service service-active">
-                            <a href="#" class="button">Доставка</a>
+                            <button type="button" class="button">Доставка</button>
                         </li>
     					<li class="button-service">
-                            <a href="#" class="button">Гарантия</a>
+                            <button type="button" class="button">Гарантия</button>
                         </li>
     					<li class="button-service">
-                            <a href="#" class="button">Кредит</a>
+                            <button type="button" class="button">Кредит</button>
                         </li>
     				</ul>
     				<div class="service-item service-dilivety block-show">
@@ -260,10 +260,10 @@
                 <section class="info-contacts">
                     <h3>Контакты</h3>
                     <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-                    <a href="#" class="map">
+                    <a href="https://yandex.ru/maps/213/moscow/?clid=2261452&ll=37.529654%2C55.686980&mode=search&sll=30.315635%2C59.938951&sspn=0.986023%2C0.292169&text=%D0%B3.%20%D0%9C%D0%BE%D1%81%D0%BA%D0%B2%D0%B0%2C%20%D1%83%D0%BB.%20%D0%A1%D1%82%D1%80%D0%BE%D0%B8%D1%82%D0%B5%D0%BB%D0%B5%D0%B9%2C%2015&win=360&z=17" class="map">
                         <img src="img/map.jpg" width="560" height="222" alt="г. Москва, ул. Строителей, 15">
                     </a>
-                    <a href="#" class="button button-message">Напишите нам</a>
+                    <a href="writeus.html" class="button button-message">Напишите нам</a>
                 </section>
             </div>
         </main>
