--- a/catalog.html
+++ b/catalog.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <nav class="main-nav">
-                <h2>Каталог товаров</h2>
+                <h2><a href="#" class="main-nav-headline">Каталог товаров</a></h2>
                 <ul class="header-service">
                     <li><a href="#">Доставка</a></li>
                     <li><a href="#">Гарантия</a></li>
